--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ QTASK_DATABASE_TEST_URL='sqlite:///./data/qtask.test.sqlite'
 QTASK_LOGS_DIR='data/logs'
 QTASK_TASK_LOGS_DIR='data/logs/tasks'
 QTASK_LOG_FILE_NAME='qtask.log'
+QTASK_ZOOKEEPER_HOSTS='127.0.0.1:2181'
