func: add config `QTASK_DAEMON_RPC_ADDRESS`.

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ QTASK_LOGS_DIR='data/logs'
 QTASK_TASK_LOGS_DIR='data/logs/tasks'
 QTASK_LOG_FILE_NAME='qtask.log'
 QTASK_ZOOKEEPER_HOSTS='127.0.0.1:2181'
+QTASK_DAEMON_RPC_ADDRESS='127.0.0.1:50051'
