refactor: rename `qtaskd` to `executor`.

--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@ QTASK_LOGS_DIR='data/logs'
 QTASK_TASK_LOGS_DIR='data/logs/tasks'
 QTASK_LOG_FILE_NAME='qtask.log'
 QTASK_ZOOKEEPER_HOSTS='127.0.0.1:2181'
-QTASK_DAEMON_RPC_HOST='127.0.0.1'
-QTASK_DAEMON_RPC_PORT=50051
+QTASK_EXECUTOR_RPC_HOST='127.0.0.1'
+QTASK_EXECUTOR_RPC_PORT=50051
