--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ sqlalchemy~=1.4.26
 tqdm~=4.62.3
 python-dotenv~=0.19.1
 kazoo~=2.8.0
-betterproto[compiler]~=2.0.0b3
 grpclib~=0.4.2
+git+https://github.com/LinkTsang/python-betterproto@qtask#egg=betterproto
